$Id$                       -*-text-*-

**** 0.72 

Fix rt.cpan.org #82063

	yxrrset, nxrrset and rr_del functions should force zero TTL.

Fix rt.cpan.org #82047
 
	Clarify documentation to indicate that header counts may
	differ from the number of RRs present if a packet is corrupt.

Fix rt.cpan.org #81941

	Clarify documentation to make clear that bgread will not switch to
	TCP when a truncated packet is received.

**** 0.71 Dec 15, 2012

Temporary workaround rt.cpan.org #81760

	The rdatastr method for TXT RRs will return unconditionally 
	quoted rdata fields to work around an issue with updating 
	SpamAssassin rules.  This workaround will be reverted after
	release of a version of SpamAssassin which resolves the issue.

Fix rt.cpan.org #81942

	Fix memory leak on packet cleanup. The back-reference via the
	header attribute (with xbody) caused the garbage collector not 
	to clean a packet. Header is now explicitly cleaned via
	Net::DNS::Packet::DESTROY.

Fix TSIG initialization

	Uninitialised algorithm attribute caused signature generation
	to fail silently when creating a TSIG signed packet.

Fix rt.cpan.org #81869

	The rr_del auxilliary function broken by a conflicting change
	in the RR.pm string parser. Note the ambiguous use of ANY,
	which may stand for CLASS255 or TYPE255 depending upon the
	argument string presented.

Fix rt.cpan.org #81756

	Test failures on Perl 5.8.5 .. 5.8.8.
	lc(), uc() and case insensitive regex matching broken for UTF8.
	Thanks are due to Paul Howarth for patient work with perl -d.
	
Fix rt.cpan.org #81787

	NXDOMAIN no longer reported by $resolver->errorstring.

Fix rt.cpan.org #81814

	Allow zero in format, tag and algorithm fields of CERT RR.

Fix rt.cpan.org #81786

	Substitute last owner for leading spaces in multiline zonefile RR.

Fix rt.cpan.org #77444

	Make use of new extended header modus operandi for OPT records
	also in the resolver. Preventing a warning.

**** 0.70 Dec 6, 2012
